feat: delete product functionality ✨
